# msc-thesis-code

./: .env.example  .gitignore  AGENTS.override.md  Makefile  README.md  pyproject.toml
configs/: embedding.yaml  methods.yaml  models.yaml  price_card.yaml  price_card_cache_discount.yaml
docs/: CODEMAP.md  graphrag_design_notes.md
scripts/: breakeven_analysis.py  breakeven_main_study.py  build_scored_cells.py  chain_launch_novelqa.sh  check_tui.py  collect_qasper_gold_20260520.py  embedding_cost_calibration.py  error_slice_analysis.py  figures_error_slices.py  figures_main_study.py  kendall_arch_stability.py  kendall_arch_stability_rerun_20260519.py  kendall_arch_stability_rescored.py  kendall_arch_stability_under_gold_20260519.py  kendall_cross_dataset_under_gold.py  kendall_stats_bootstrap.py  memorization_main_study.py  novelqa_codabench_accuracy.py  novelqa_local_score.py  novelqa_local_score_rerun_20260519.py  novelqa_local_score_rescored.py  novelqa_nocontext_control.py  novelqa_reparse_predictions_rerun_20260519.py  novelqa_reparse_predictions_rescored.py  qasper_nocontext_control.py  rank_table.py  rekey_preprocess_cache.py  rescore_gemini_flash_qasper_20260520.py  resume_phase_f1_v2.sh  run_all_candidates.sh  run_main_study.ps1  run_main_study.sh  run_provider_lane.sh  run_provider_lane_novelqa.sh  significance_main_study.py  submit_rerun_to_codabench.py  submit_rescored_phaseg.py  summarise_novelqa_grid.py  tables_main_study.py
scripts/figures/: plot_dataset_interaction.py  plot_kendall_distribution.py  plot_per_arch_accuracy.py  plot_rank_bump.py
src/pilot/: __init__.py  build_call_cache.py  env.py  ledger.py  preprocess_cache.py  price_card.py  progress.py  provenance.py
src/pilot/architectures/: __init__.py  base.py  graphrag.py  graphrag_TODO.md  naive_rag.py  raptor.py
src/pilot/cli/: __init__.py  (+11 more)
tests/: conftest.py  test_architectures.py  test_build_calibration_pool.py  test_build_robustness.py  test_chunker.py  test_codabench_extract_score.py  test_codabench_format.py  test_codabench_idempotency.py  test_completeness_check.py  test_cost_report.py  test_crash_safety.py  test_gemini_retry.py  test_graphrag.py  test_ledger.py  test_mc_postprocessor.py  test_metrics.py  test_ollama_embed_cache.py  test_openai_compatible_provider_thinking.py  test_phase_f_kendall.py  test_phase_f_pareto.py  test_preprocess_cache.py  test_prompts.py  test_provenance.py  test_provider_factory.py  test_raptor_stage.py  test_step_1_orchestrator.py  test_step_2_orchestrator.py  test_step_3_build_failures.py  test_step_3_dispatcher.py  test_step_3_full_loaders.py  test_step_3_preprocessing_cache.py  test_step_3_resume.py  test_step_4_variance.py
(+30 files in other folders)
